--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="container">
                     <h1 class="hero-title">Эффективные решения для вашего
                         бизнеса</h1>
-                    <button type="button hero-btn" class="button"
+                    <button type="button" class="button"
                         data-modal-open>Заказать
                         услугу</button>
                 </div>
@@ -457,18 +457,103 @@
                             </a></li>
                     </ul>
                 </div>
+                <div class="sign-up">
+                    <h2 class="sign-up-title">Подпишитесь на рассылку</h2>
+                    <div class="sign-up-wrap">
+                        <form class="sign-up-form">
+                            <input type="email" placeholder="E-mail"
+                                class="sign-up-input">
+                        </form>
+
+                        <button type="submit" class="button sign-up-btn">Подписаться
+                            <svg class="send-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </footer>
+            <div class="backdrop is-hidden" data-modal>
+                <div class="modal">
+                    <button type="button" class="close-icon-btn"
+                        data-modal-close>
+                        <svg class="close-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-close-cross"></use>
+                        </svg>
+                    </button>
+
+                    <p class="header-form">Оставьте свои данные, мы вам
+                        перезвоним</p>
+                    <form class="form">
+                        <div class="form-field">
+                            <label for="name" class="form-label"> Имя </label>
+                            <div class="form-input-wrap">
+                                <input type="text" class="form-input"
+                                    name="user-name"
+                                    id="name">
+                                <svg class="name-icon" width="18" height="18">
+                                    <use
+                                        href="./images/icons.svg#icon-form-name"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="form-field">
+                            <label for="tel" class="form-label"> Телефон
+                            </label>
+                            <div class="form-input-wrap">
+                                <input type="tel" class="form-input"
+                                    name="user-tel"
+                                    id="tel">
+                                <svg class="tel-icon" width="18" height="18">
+                                    <use
+                                        href="./images/icons.svg#icon-form-tel"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="form-field">
+                            <label for="email" class="form-label"> Почта
+                            </label>
+                            <div class="form-input-wrap">
+                                <input type="email" class="form-input"
+                                    name="user-email"
+                                    id="email">
+                                <svg class="email-icon" width="18" height="18">
+                                    <use
+                                        href="./images/icons.svg#icon-form-email"></use>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="form-field">
+                            <label for="comment" class="form-label"> Комментарий
+                            </label>
+                            <textarea name="comment" id="comment"
+                                class="form-text"
+                                placeholder="Введите текст"></textarea>
+                        </div>
+                        <div class="form-field">
+                            <input type="checkbox"
+                                id="form-checkbox"
+                                name="form-checkbox"
+                                class="form-checkbox visually-hidden">
+                            <label for="form-checkbox" class="label-checkbox">
+                                <span class="form-checkbox-wrap">
+                                    <svg class="form-checkbox-icon" width="16"
+                                        height="15">
+                                        <use
+                                            href="./images/icons.svg#icon-check-mark"></use>
+                                    </svg>
+                                </span>
+                                <span> Соглашаюсь с рассылкой и
+                                    принимаю
+                                    <a href="" class="label-checkbox-link">Условия
+                                        договора</a></span>
+                            </label>
+                        </div>
+                        <button type="submit" class="button submit-btn">Отправить</button>
+                    </form>
+
+                </div>
             </div>
-        </footer>
-        <div class="backdrop is-hidden" data-modal>
-            <div class="modal">
-                <button type="button" class="close-icon-btn"
-                    data-modal-close>
-                    <svg class="close-icon" width="18" height="18">
-                        <use href="./images/icons.svg#icon-close-cross"></use>
-                    </svg>
-                </button>
-            </div>
-        </div>
-        <script src="./js/modal.js"></script>
-    </body>
-</html>
+            <script src="./js/modal.js"></script>
+        </body>
+    </html>
