--- a/index.html
+++ b/index.html
@@ -461,15 +461,15 @@
                     <h2 class="sign-up-title">Подпишитесь на рассылку</h2>
                     <div class="sign-up-wrap">
                         <form class="sign-up-form">
-                            <input type="email" placeholder="E-mail"
+                            <input type="email" name="email"
+                                placeholder="E-mail"
                                 class="sign-up-input">
+                            <button type="submit" class="button sign-up-btn">Подписаться
+                                <svg class="send-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-send"></use>
+                                </svg>
+                            </button>
                         </form>
-
-                        <button type="submit" class="button sign-up-btn">Подписаться
-                            <svg class="send-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-send"></use>
-                            </svg>
-                        </button>
                     </div>
                 </div>
             </footer>
