--- a/index.html
+++ b/index.html
@@ -459,18 +459,16 @@
                 </div>
                 <div class="sign-up">
                     <h2 class="sign-up-title">Подпишитесь на рассылку</h2>
-                    <div class="sign-up-wrap">
-                        <form class="sign-up-form">
-                            <input type="email" name="email"
-                                placeholder="E-mail"
-                                class="sign-up-input">
-                            <button type="submit" class="button sign-up-btn">Подписаться
-                                <svg class="send-icon" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-send"></use>
-                                </svg>
-                            </button>
-                        </form>
-                    </div>
+                    <form class="sign-up-form">
+                        <input type="email" name="email"
+                            placeholder="E-mail"
+                            class="sign-up-input">
+                        <button type="submit" class="button sign-up-btn">Подписаться
+                            <svg class="send-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </form>
                 </div>
             </footer>
             <div class="backdrop is-hidden" data-modal>
@@ -523,14 +521,14 @@
                                 </svg>
                             </div>
                         </div>
-                        <div class="form-field">
+                        <div class="form-field form-field-textarea">
                             <label for="comment" class="form-label"> Комментарий
                             </label>
                             <textarea name="comment" id="comment"
                                 class="form-text"
                                 placeholder="Введите текст"></textarea>
                         </div>
-                        <div class="form-field">
+                        <div class="form-field form-field-checkbox">
                             <input type="checkbox"
                                 id="form-checkbox"
                                 name="form-checkbox"
